<resources>
    <string name="app_name">Payment\nTracker</string>
    <string name="Testing">Testing</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="signup">SIGN UP</string>
    <string name="alreday">Already Registered?</string>
    <string name="title_activity_details">details</string>
</resources>
